--- a/style.css
+++ b/style.css
@@ -1,37 +1,41 @@
 /* CSS Document */
 body{
-	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
-	font-size:15px;
-	line-height:1.5;
-	background-color:aqua;
+	font font-family: "Hoefler Text", "Liberation Serif", "Times New Roman", "serif";;
+	font-size: 15px;
+	line-height: 1.5;
+	background: #C4C4C4;
 }
 
-/* Gobal */
-.container{
-	width:80%;
-	margin:auto;
+header{
+	background:#6B1818;
+	color:#ffffff;
+	padding: 1px 1px 1px 40px;
+	min-height: 20px;
+	border-bottom: #CF5F61 30px solid;
+	font-size: 20px;
+}
+
+.top{
+	width: 80%;
+	margin: auto;
 	overflow: hidden;
 }
-/* Header*/
-header{
-	background: #DFC6C6;
-	color:#ffffff;
-	padding-top:30px;
-	min-height:70px;
-	border-bottom: #CF5F61 3px solid;
+
+.body{
+	width: 78%;
+	margin: auto;
+	overflow: hidden;
 }
 
 header a{
-	color:#0A23E7;
+	color: #000000;
 	text-decoration:none;
 	text-transform: uppercase;
-	font-size: 16px;
+	text-align: center;
+	font-size: 20px;
+	font-display: auto;
 }
 
-header ul{
-	margin:0;
-	padding:0;
-}
 
 header li{
 	float:left;
