--- a/style.css
+++ b/style.css
@@ -1,45 +1,45 @@
 /* CSS Document */
-body{
-	font font-family: "Hoefler Text", "Liberation Serif", "Times New Roman", "serif";;
-	font-size: 15px;
-	line-height: 1.5;
-	background: #C4C4C4;
-}
-
 header{
-	background:#6B1818;
-	color:#ffffff;
-	padding: 1px 1px 1px 40px;
-	min-height: 20px;
-	border-bottom: #CF5F61 30px solid;
-	font-size: 20px;
+	background:repeating-linear-gradient(black,blue);
+	width: 98.5%;
+	height: 40px;
+	color: white;
+	font-size: 200%;
+	padding: 10px 10px 10px 10px;
 }
 
-.top{
-	width: 80%;
-	margin: auto;
-	overflow: hidden;
+body{
+	background:url("Assets/Images/Background.jpg");
+	background-size: cover;
+	font-family: "Arial";
+	color: white;
 }
 
-.body{
-	width: 78%;
-	margin: auto;
-	overflow: hidden;
-}
-
-header a{
-	color: #000000;
-	text-decoration:none;
-	text-transform: uppercase;
-	text-align: center;
-	font-size: 20px;
-	font-display: auto;
-}
-
-
-header li{
-	float:left;
-	display:inline;
-	padding: 0 20px 0 20px;
+ul{
+	margin: 1px;
+	padding: 0px 0 0 0;
+	list-style: none;
 	
+}
+
+ul li{
+	float : right;
+	width: 16%;
+	height: 25px;
+	background: repeating-linear-gradient(blue,black);
+	opacity: 0.8;
+	line-height: 25px;
+	text-align: center;	
+}
+
+ul li a{
+	text-decoration: none;
+	color: white;
+	display: block;
+	
+}
+
+ul li a:hover{
+	background-color: white;
+	color: black;
 }
