--- a/ccs/Home.css
+++ b/ccs/Home.css
@@ -1,17 +1,17 @@
 .center{
-	background-color: black;
-	opacity: 0.5;
+	
 	position: absolute;
 	width: 90%;
 	height: 70%;
 	left: 50%;
 	top:50%;
 	margin-left: -45%;
-	margin-top: -12.5%; 
+	margin-top: -20.5%; 
 }
 
 html{
-	background: black;
+	background: url("../Assets/Images/Background_files/122762.jpg");
+	
 }
 
 
@@ -34,13 +34,18 @@ nav ul li{
 	width: 20%;
 	height: 0px;
 	background-color: white;
+	opacity: 0.7;
 	color: black;
 	text-align: center;
+	font-family: "Open Sans";
+	font-variant-caps: all-small-caps;
+	font-size: 25px
 	
 }
 
 nav ul li:hover{
-	background-color: red;
+	background-color:gray;
+	color: white;
 }
 
 nav ul li a{
