--- a/css/bootstrap-4.3.2.css
+++ b/css/bootstrap-4.3.2.css
@@ -60,7 +60,8 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color: #ffe;
+
 }
 
 [tabindex="-1"]:focus {
